--- a/index.html
+++ b/index.html
@@ -5,7 +5,34 @@
     <title>Memes n' Bruce</title>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="index.html">Memes</a></li>
+            <li><a href="#">more memes because i'm trying to make this menu longer for practice</a></li>
+            <li><a href="bruce.html">our lord and savior Bruce the handsome batman</a></li>
+            <li><a href="#">Cajun recipes</a></li>
+        </ul>
+    </nav>
     <h1>Here are some memes</h1>
+    <h2>Brick squad meeting</h2>
+    <p>it's a meeting about... you know.. with you know who</p>
+    <img src="images/bricksquad.jpeg"alt="brick squad meeting"width="500"height="500">
+    <h2>dinosaur doing something</h2>
+    <p>he's doing.... you know what</p>
+    <img src="images/dinosaur.jpeg"alt="dinosaur doing you know what"width="225"height="225">
+    <h2>here's f3nt. just f3nt</h2>
+    <p>i'm not gonna replace the 3 with an e cause i'm already on too many lists. but yeah here's f3nt</p>
+    <img src="images/fent.jpeg"alt="f3nt"width="500"height="500">
+    <h2>here's a poster on the wall that I enjoy</h2>
+    <p>I enjoy looking at this</p>
+    <img src="images/hanginthere.jpeg"alt="hang in there"width="350"height="466">
+    <h2>kermit</h2>
+    <p>here's a pic to send to your aunt Jackie when she says she was married with kids at your age</p>
+    <img src="images/kermit.jpeg"alt="aggot"width="500"height="349">
+    <h2>here's this for no reason</h2>
+    <p>...i know what you did last summer</p>
+    <img src="images/spongebob.jpeg"alt="spongebob"width="500"length="360">
+
     
 </body>
 </html>
