--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Memes n' Bruce</title>
 </head>
 <body>
+    <h1>menu for the foos</h1>
     <nav>
         <ul>
             <li><a href="index.html">Memes</a></li>
