all pages created now

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <nav>
         <ul>
             <li><a href="index.html">Memes</a></li>
-            <li><a href="#">more memes because i'm trying to make this menu longer for practice</a></li>
+            <li><a href="randomshit.html">more memes because i'm trying to make this menu longer for practice</a></li>
             <li><a href="bruce.html">our lord and savior Bruce the handsome batman</a></li>
-            <li><a href="#">Cajun recipes</a></li>
+            <li><a href="cajun.html">Cajun recipes</a></li>
         </ul>
     </nav>
     <h1>Here are some memes</h1>
