added all the pages

--- a/bruce.html
+++ b/bruce.html
@@ -9,10 +9,15 @@
     <nav>
         <ul>
             <li><a href="index.html">home (back to first memes)</a></li>
-            <li><a href="#">other random shit idk</a></li>
-            <li><a href="#</li>
+            <li><a href="randomshit.html">other random shit idk</a></li>
+            <li><a href="bruce.html">bruce the handsome batman</a></li>
         </ul>
     </nav>
-    
+    <h2>Bruce the handsome batman</h2>
+    <img src="images/brucebasket.jpeg"alt="bruce in a basket"width="350"length="466">
+    <img src="images/brucebed.jpeg"alt="bruce in a bed"width="350"height="466">
+    <img src="images/brucetoes.jpeg"alt="bruce toes"width="350"height="466">
+    <img src="images/brucetunnel.jpeg"alt="bruce in a tunnel"width="350"height="466">
+    <p>that's all for now folks cause i was too lazy to upload more pics but he's the best goddamn thing on earth and on this side of the Mississippi since Texas was invented</p>
 </body>
 </html>
