--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>menu for the foos</h1>
     <nav>
         <ul>
-            <li><a href="index.html">Memes</a></li>
+            <li><a href="index.html">Memes... the page you're on now</a></li>
             <li><a href="randomshit.html">more memes because i'm trying to make this menu longer for practice</a></li>
             <li><a href="bruce.html">our lord and savior Bruce the handsome batman</a></li>
             <li><a href="cajun.html">Cajun recipes</a></li>
@@ -32,7 +32,7 @@
     <img src="images/kermit.jpeg"alt="aggot"width="500"height="349">
     <h2>here's this for no reason</h2>
     <p>...i know what you did last summer</p>
-    <img src="images/spongebob.jpeg"alt="spongebob"width="500"length="360">
+    <img src="images/spongebob.jpeg"alt="spongebob"width="500"height="360">
 
     
 </body>
