finished cajun menu

--- a/bruce.html
+++ b/bruce.html
@@ -10,7 +10,7 @@
         <ul>
             <li><a href="index.html">home (back to first memes)</a></li>
             <li><a href="randomshit.html">other random shit idk</a></li>
-            <li><a href="bruce.html">bruce the handsome batman</a></li>
+            <li><a href="cajun.html">cajun recipes cause why not</a></li>
         </ul>
     </nav>
     <h2>Bruce the handsome batman</h2>
