--- a/cajun.html
+++ b/cajun.html
@@ -13,6 +13,108 @@
             <li><a href="bruce.html">bruce the handsome batman</a></li>
         </ul>
     </nav>
+    <h1>here are some recipes I stole from the internet</h1>
+    <table border=""1">
+        <tr>
+            <th><a href="#whiskeycookies"><img src="images/cookies (1).jpg"alt="whiskey cookies"width="200"height="133"></a></th>
+            <th><a href="#deepfriedturkey"><img src="images/deep-fried-turkey-575x262 (1).jpg"alt="deep fried turkey"width="200"height="91"></a></th>
+            <th><a href="#jambalaya"><img src="images/jambalaya_sausage_kndynt2099_brandon-575x262 (2).jpg"alt="jambalaya"width="200"height="91"></a></th>
+            <th><a href="#bbqcrabs"><img src="images/Stuffed-Crab-Mushroom-Plating-Custom (1).jpg"alt="stuffed crab"width="200"height="115"></a></th>
+        </tr>
+    </table>
+    <section id="whiskeycookies">
+    <h2>whiskey cookies</h2>
+    <p>
+        <strong>ingredients:</strong><br>
+        1 cup brown sugar<br>
+        1/2 cup (8 tablespoon) butter softened<br>
+        4 eggs<br>
+        3 teaspoon milk<br>
+        3 teaspoon baking soda<br>
+        3 cups flour<br>
+        1 teaspoon cinnamon<br>
+        1 teaspoon allspice<br>
+        1 1/2 pounds pecans (4-6 cups)<br>
+        1 box white raisins<br>
+        1 cup candied red and green cherries chopped<br>
+        1 cup candied pineapple<br>
+        1/2 to 1 cup whiskey<br>
+        <strong>directions:</strong><br>
+        Reserve one cup flour and in a separate bowl mix the remaining flour, baking soda and spices together. Chop the candied fruits into small pieces. Using the reserved one cup flour dredge the chopped fruit and pecans and set aside. Cream the brown sugar and the butter together; stir in the milk. Add the eggs to the creamed butter and sugar. Add the whiskey and combine. Combine with the flour to the mixture gradually. Fold in the candied fruit, raisins and nuts into the mixture.<br>
+        Bake 325 at degrees 15 - 18 minutes until lightly brown.
+        <a href="https://www.realcajunrecipes.com/recipe/whiskey-cookies/">where i stole it from</a>
+    </p>
+    </section>
+    <section id="deepfriedturkey">
+    <h2>deep fried turkey</h2>
+    <p>
+        <strong>ingredients:</strong><br>
+        12-15 lbs turkey<br>
+        1 1/2 cups Italian dressing<br>
+        1 stick butter<br>
+        1 handful Cajun seasonings<br>
+        Peanut oil, amount depending on size of turkey<br>
+        Garlic powder and onion powder to taste<br>
+        <strong>directions:</strong><br>
+        actually i'm too lazy to copy and paste these directions, there are just too many, please <a href="https://www.realcajunrecipes.com/recipe/cajun-deep-fried-turkey/">click here</a> instead
+    </p>
+    </section>
+    <section id="jambalaya">
+    <h2>jambalaayyyaaaa (i still don't know wtf that is i grew up in MN but here it is)</h2>
+    <p>
+        <strong>ingredients:</strong><br>
+        1 pound Andouille (Cajun) or mild smoked pork sausage, sliced 1/4-inch thick<br>
+        1 1/2 pound boneless skinless chicken thigh meat, cubed<br>
+        1 pound ground Italian sausage (mild)<br>
+        1 pound cubed ham<br>
+        2 cups onions, diced<br>
+        1 cup bell pepper<br>
+        2 tbsp minced fresh garlic<br>
+        1/2 cup Old Bays Seafood seasoning (in all), divided<br>
+        1/2 tbsp ground black pepper<br>
+        1/2 tbsp white pepper<br>
+        1/2 tbsp red pepper<br>
+        3/4 tbsp thyme leaves<br>
+        3/4 tbsp basil leaves<br>
+        3 to 4 medium bay leaves<br>
+        5 cups chicken stock<br>
+        1 beer (that's a lie you need 14 but 1 for the recipe)<br>
+        3 cups long grain rice<br>
+        1/2 cup chopped parsley leaves<br>
+        <strong>directions:</strong><br>
+        Add red, black and white peppers to mixture and cook until veggies are translucent, about 5-7 minutes over medium-high heat. Again use the spoon to scrape the meat from sticking and burning to the bottom of the pot.<br>
+        Add the ham and garlic and cook for another minute stirring and scraping bottom of pot to not scorch garlic. Add the remaining Old Bay seasoning, thyme, basil and bay leaves; stir. Return chicken and sausage to pot; mix and fold. Cook over low heat for 10 minutes. This will give the seasonings time to release their oils and flavors.<br>
+        Add beer to deglaze pan scraping about 2 minutes. Add the stock and bring to a boil. Add the rice and fold in. Return to a slow boil and cook uncovered for about 5 minutes stirring and scraping pan bottom so rice does not stick and burn to pan bottom; mix in parsley. Reduce heat to the lowest possible setting and simmer, covered, for at least 30-35 minutes. Do not remove the cover while the rice is steaming.<br>
+        After uncovering there may be some liquid remaining on top. Fold the rice in (DO NOT STIR). Turn off heat and let stand till liquid is absorbed. Remove bay leaves. Enjoy!<br>
+        <a href="https://www.realcajunrecipes.com/recipe/marks-cajun-jambalaya/">where i stole this shit from</a>
+    </p>
+    </section>
+    <section id="bbqcrabs">
+    <h2>mr. krabs if he was thrown on the grill</h2>
+    <p>
+        <strong>ingredients:</strong><br>
+        12 crabs cleaned and seasoned with salt and pepper or your favorite Cajun seasoning<br>
+        1 cup chopped onions<br>
+        1 pound chopped shrimp<br>
+        8 tbsp butter<br>
+        1 tsp Cajun seasoning to taste<br>
+        1/4 cup Parmesan cheese<br>
+        One slice soaked bread in water or milk<br>
+        1/3 cup parsley<br>
+        1 tsp garlic granules<br>
+        1 tsp onion powder<br>
+        Butter for basting crabs<br>
+        1/4 tsp white pepper (optional)<br>
+        <strong>directions:</strong><br>
+        Season the crab lightly with your favorite seasonings. Set aside.<br>
+        Sauté one stick of butter and the one cup onions<br>
+        Stir in and combine the chopped shrimp<br>
+        Add the remaining ingredients and blend with the onions and shrimp.<br>
+        Stuff the center of the crab.<br>
+        Baste with butter and cook on coals for about 20 minutes or until shrimp mixture is cooked thoroughly.<br>
+        <a href="https://www.realcajunrecipes.com/recipe/barbecue-bar-b-que-crabs/">where i stole this shit from</a>
+    </p>
+    </section>
     
 </body>
 </html>
