--- a/randomshit.html
+++ b/randomshit.html
@@ -5,6 +5,14 @@
     <title>random shit</title>
 </head>
 <body>
-    
+    <h3>menu for the foos</h3>
+    <nav>
+        <ul>
+            <li><a href="index.html">home (back to first memes)</a></li>
+            <li><a href="bruce.html">bruce the handsome batman</a></li>
+            <li><a href="cajun.html">cajun recipes cause why not</a></li>
+        </ul>
+    </nav>
+    <img src="images/grandpa.jpeg"alt="grandpa"width="500"height="480">
 </body>
 </html>
