--- a/bruce.html
+++ b/bruce.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Bruce the handsome batman</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
+	<link href="styles.css" rel="stylesheet">
 </head>
 <body>
     <h3>menu for the foos</h3>
